<resources>
    <string name="app_name">BGI</string>
    <string name="ghost_alert_message">Oops! Something went wrong \n Please try again.</string>
    <string name="reload">Reload</string>
    <string name="internet_title">Internet Connection Failed</string>
    <string name="internet_message">No Internet connection was found. Please try again later</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_title">Exit</string>
    <string name="dialog_message">Are you sure want to Exit?</string>

    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="title_activity_bottom">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="myname">Viswanath Pradap Singh A</string>
    <string name="mailid">viswanathsingh04@gmail.om</string>
    <string name="contact">+919600630577</string>

    <string name="select_feedback_type">Select Feedback Type :</string>
    <string name="enter_your_feedback">Enter your Feedback</string>
    <string name="enter_title">Enter Title</string>
    <string name="submit">Submit</string>
</resources>
